test_suite5/ALAN/test_suite/alan-2022-examples/failing/006900_mutation.alan
source Q begin or put "5" end
